// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public surface is frozen > api.ts exports exactly the expected names > api-exports 1`] = `
[
  "CallbackSchema",
  "DERIVED_DIALECTS",
  "FN_DOCS",
  "LineIndex",
  "Lineage",
  "SIGNATURES",
  "SqlDocument",
  "TypeInfo",
  "analyze",
  "clausesOf",
  "complete",
  "completeAt",
  "deriveSymbols",
  "dialectSymbols",
  "dialectVocabulary",
  "displayName",
  "foldIdentifier",
  "frameAt",
  "hasSignature",
  "jinjaSlotAt",
  "lineage",
  "lineageAt",
  "lineageOf",
  "lookupFnDoc",
  "lookupSignature",
  "originsOfExpr",
  "parse",
  "qualify",
  "referencesAt",
  "renderSignature",
  "reservedKeywords",
  "resolveDialect",
  "setOpArmsOf",
  "signatureAt",
  "toAst",
  "toScopes",
  "tokenize",
]
`;

exports[`public surface is frozen > index.ts exports exactly the expected names > index-exports 1`] = `
[
  "CallbackSchema",
  "DERIVED_DIALECTS",
  "DbtTemplateProvider",
  "DefaultTemplateProvider",
  "FN_DOCS",
  "LineIndex",
  "Lineage",
  "MAIN_FRAME",
  "NO_OUTPUT_BUILTINS",
  "OPEN_PROVIDER",
  "SIGNATURES",
  "Schema",
  "SqlDocument",
  "SqlSession",
  "TypeInfo",
  "allQueryExprs",
  "analyze",
  "childExprs",
  "clausesOf",
  "coarseKind",
  "complete",
  "completeAt",
  "deriveSymbols",
  "dialectSymbols",
  "dialectVocabulary",
  "displayName",
  "endPosition",
  "foldIdentifier",
  "formatType",
  "frameAt",
  "hasSignature",
  "inferType",
  "jinjaSlotAt",
  "lineage",
  "lineageAt",
  "lineageOf",
  "lookupFnDoc",
  "lookupSignature",
  "lowerBigQuery",
  "lowerDatabricks",
  "lowerDuckdb",
  "lowerMysql",
  "lowerPostgres",
  "lowerRedshift",
  "lowerSnowflake",
  "lowerSqlite",
  "lowerTSql",
  "lowerTrino",
  "nodeAt",
  "originsOfExpr",
  "parse",
  "parseBigQuery",
  "parseDatabricks",
  "parseDuckdb",
  "parseMysql",
  "parsePostgres",
  "parseRedshift",
  "parseSnowflake",
  "parseSqlite",
  "parseTSql",
  "parseTrino",
  "parseType",
  "partSpanOf",
  "partSpansOf",
  "qualify",
  "referencesAt",
  "renderSignature",
  "reservedKeywords",
  "resolveDialect",
  "resolveScopes",
  "scopeOf",
  "setOpArmsOf",
  "signatureAt",
  "symbolAt",
  "toAst",
  "toScopes",
  "tokenize",
  "walk",
  "walkExprs",
]
`;

exports[`public surface is frozen > public function arities are unchanged > api-fn-arities 1`] = `
{
  "CallbackSchema": 1,
  "LineIndex": 1,
  "Lineage": 1,
  "SqlDocument": 4,
  "TypeInfo": 1,
  "analyze": 2,
  "clausesOf": 2,
  "complete": 4,
  "completeAt": 4,
  "deriveSymbols": 2,
  "dialectSymbols": 1,
  "dialectVocabulary": 1,
  "displayName": 2,
  "foldIdentifier": 2,
  "frameAt": 3,
  "hasSignature": 2,
  "jinjaSlotAt": 3,
  "lineage": 2,
  "lineageAt": 3,
  "lineageOf": 3,
  "lookupFnDoc": 2,
  "lookupSignature": 2,
  "originsOfExpr": 3,
  "parse": 2,
  "qualify": 2,
  "referencesAt": 4,
  "renderSignature": 2,
  "reservedKeywords": 1,
  "resolveDialect": 1,
  "setOpArmsOf": 1,
  "signatureAt": 3,
  "toAst": 2,
  "toScopes": 1,
  "tokenize": 2,
}
`;
